[gd_scene load_steps=9 format=3 uid="uid://dn6ectttoxh5q"]

[ext_resource type="Script" path="res://scenes/play/level_file.gd" id="1_m74yj"]
[ext_resource type="Script" path="res://scenes/play/level_generator.gd" id="2_j045y"]
[ext_resource type="TileSet" uid="uid://cvh4jkcd04loh" path="res://tilesets/tileset.tres" id="3_mcv3w"]
[ext_resource type="Script" path="res://scenes/play/level.gd" id="4_6yw7d"]
[ext_resource type="PackedScene" uid="uid://cdkshrbxx45cn" path="res://scenes/player/player.tscn" id="4_60k8e"]
[ext_resource type="PackedScene" uid="uid://c3km10ul4olx" path="res://scenes/enemies/crush_trap.tscn" id="6_l8chw"]
[ext_resource type="Texture2D" uid="uid://cqnyy4o1g3eog" path="res://textures/bg/bg_cave.png" id="7_yrk72"]
[ext_resource type="PackedScene" uid="uid://cbeeogt8skb3b" path="res://scenes/play/repeating_world/repeating_world.tscn" id="10_vwn74"]

[node name="Play" type="Node2D"]

[node name="Level" type="Node" parent="."]
script = ExtResource("4_6yw7d")

[node name="VerticalBorderLayer" type="TileMapLayer" parent="Level"]
position = Vector2(0, -64)
tile_set = ExtResource("3_mcv3w")

[node name="HorizontalBorderLayer" type="TileMapLayer" parent="Level"]
position = Vector2(-64, 0)
tile_set = ExtResource("3_mcv3w")

[node name="DecorationLayer" type="TileMapLayer" parent="Level"]
tile_set = ExtResource("3_mcv3w")

[node name="MainLayer" type="TileMapLayer" parent="Level"]
tile_set = ExtResource("3_mcv3w")

[node name="BackgroundLayer" type="TileMapLayer" parent="Level"]
tile_set = ExtResource("3_mcv3w")

[node name="LevelFile" type="Node2D" parent="."]
script = ExtResource("1_m74yj")

[node name="LevelGenerator" type="Node2D" parent="."]
script = ExtResource("2_j045y")

[node name="Player" parent="." node_paths=PackedStringArray("level") instance=ExtResource("4_60k8e")]
level = NodePath("../Level")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(5614, 3168)
zoom = Vector2(0.1, 0.1)

[node name="CrushTrap" parent="." instance=ExtResource("6_l8chw")]
position = Vector2(-200, 303)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(512, 512)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("7_yrk72")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1024, 0)
texture = ExtResource("7_yrk72")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(2048, 0)
texture = ExtResource("7_yrk72")
centered = false

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(0, 1024)
texture = ExtResource("7_yrk72")
centered = false

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1024, 1024)
texture = ExtResource("7_yrk72")
centered = false

[node name="Sprite2D6" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(2048, 1024)
texture = ExtResource("7_yrk72")
centered = false

[node name="RepeatingWorld" parent="." instance=ExtResource("10_vwn74")]
portal_size_meter = Vector2(9, 5)
